fixed spacing on labels

--- a/style.less
+++ b/style.less
@@ -72,6 +72,7 @@ hr {
 .about p {
     display: inline-block;
     margin-left: 15em;
+}
 
     #col {
     -moz-column-count: 2;
@@ -82,14 +83,13 @@ hr {
     column-gap: 80px;    
     padding-left: 12em;
     padding-right: 12em;
-    display: none;
-    margin-left: 0em;
     }
-}
+
 
 .technical p {
     display: inline-block;
     margin-left: 15em;
+}
 
     #col2 {
     -moz-column-count: 2;
@@ -101,7 +101,7 @@ hr {
     padding-left: 12em;
     padding-right: 12em;
     }
-}
+
 
 
 .education li {
@@ -154,7 +154,8 @@ form {
     width: 90px;
     color: white;
     font-size: 0.75em;
-    padding-left: 3em;
+    padding-left: 12.5em;
+    text-align: left;
     }
 
     input, textarea {
@@ -214,4 +215,6 @@ form {
 .links {
     text-decoration: none;
     color: @main-color;
+    padding-right: 3em;
+    
 }
